--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Using GitHub with Visual Studio Code</title>
+  <title>Using GitHub with Visual Studio Code!!</title>
 </head>
 
 <body>
   <nav>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Services</a></li>
+
       <li><a href="#">Contact</a></li>
       <li><a href="#">About us</a></li>
       <li><a href="#">Careers</a></li>
+      <li><a href="#">New Stuff</a></li>
+      <li><a href="#">More Stuff</a></li>
     </ul>
   </nav>
 
